Codes/K8s-Manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-k8s-service
spec:
  selector:
    app: app-docker
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
