Codes/K8s-Manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-k8s-ingress
  labels:
    name: app-k8s-ingress
spec:
  rules:
  - host: meuappthomasteste.com.br
    http:
      paths:
      - path: "/app"
        pathType: Prefix
        backend:
          service:
            name: app-k8s-service
            port:
              number: 80
